	4. Remove tentative WithLayoutDescriptor extension method in FlatFileLayoutDescriptor. 
		- Implement type converter by convention for primitive types, then go from there w/ the api. 
			- Implement convention based type converter for primitive types. Use built in parse or tryparse methods. 
			  Use type in existing PropertyInfo, don't make user pass in the type a second time. 
				- Remember, DateTime is NOT a primitive type :)
			- As a rule of thumb, favor CONVENTION over CONFIGURATION.

6-28-81
	- Refactored unit tests. 
	- Removed virtual method calls from constructor (ParserTestBase)
	- Shared patterns and parsing for string tests and primitive type tests

7-2-18
	- Implemented default TypeConverter for primitive types w/ reflection and built in Parse method.
	- Implemented boolean specific type converter to account for 0 and 1, and uppercase True / False strings. 
	- Implemented unit tests for boolean type converter and number of rows matching input file

7-3-18
	- Changed ParseFile to right trim string fields. This should eventually be configurable. 
	- Added GetHashCode to both test models. Used R# default for now. 
	- Started thinking through a generic type converter
		- Added unit test for DateTime. Works with generic Parse method. 
		- Need to think through locale (MM/DD/YYYY vs. DD/MM/YYYY etc...)
		- Need to add additional tests for four digit years, and other formats

7-5-18
	- Added unit tests for DateTime Converter. 
		- Tested Dates, DateTimes, two vs. four digit years, w/ and w/o milliseconds, and for FormatException on invalid month.

7-6-18	
	- Started planning out interface for allowing custom type converters
	- Started a TypeConverter for a test enum (Days of week). Following documentation on MSND for type converters: https://msdn.microsoft.com/en-us/library/ayybcxe5.aspx

7-9-18
	- Tested conversions to Day enum from single character codes, abbreviated days, full days, and bad input

		- ********* RESUME HERE ********* 