@@ -50,13 +50,15 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomTypeConverters\EnumTypeConverter.cs" />
+    <Compile Include="CustomTypeConverters\DummyEnumTypeConverter.cs" />
     <Compile Include="Infrastructure\Mocks\DummyFixedWidthFileParser.cs" />
     <Compile Include="Models\DateTimeModel.cs" />
+    <Compile Include="Models\DummyEnumModel.cs" />
     <Compile Include="Models\PrimitiveTypesModel.cs" />
     <Compile Include="Models\DummyStringModel.cs" />
     <Compile Include="Tests\FixedWidthParser\StringTest.cs" />
     <Compile Include="Tests\LayoutDescriptor\ParserTestBase.cs" />
+    <Compile Include="Tests\ParseWithTypeConverter\ParseWithCustomTypeConverterTests.cs" />
     <Compile Include="Tests\TypeConverter\CustomTypeConvertTests.cs" />
     <Compile Include="Tests\TypeConverter\DateTimeConverterTests.cs" />
     <Compile Include="Tests\LayoutDescriptor\PrimitiveTypesTest.cs" />
@@ -77,6 +79,9 @@
     <None Include="InputFiles\PrimitiveTypesTest.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="InputFiles\EnumTest.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="InputFiles\StringTest.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -92,6 +97,7 @@
       <Name>FlatFile.FixedWidth</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
