@@ -1,27 +1,16 @@
-﻿using FlatFile.FixedWidth.Interfaces;
-using FlatFileParserUnitTests.CustomTypeConverters;
+﻿using FlatFileParserUnitTests.CustomTypeConverters;
 using Microsoft.VisualStudio.TestTools.UnitTesting;
 
 namespace FlatFileParserUnitTests.Tests.TypeConverter
 {
     [TestClass]
     public class CustomTypeConvertTests
-
     {
-        //private readonly IGenericTypeConverter converter;
-        //private readonly IFlatFileLayoutDescriptor<Day> settings;
         private readonly System.ComponentModel.TypeConverter converter;
 
         public CustomTypeConvertTests()
         {
-            converter = new EnumTypeConverter();
-        }
-
-        [TestMethod]
-        [ExpectedException(typeof( System.NotSupportedException), "Cannot convert from System.String")]
-        public void Should_NotConvertStringToEnum_When_ValidInvalidStringIsUsed()
-        {
-           converter.ConvertFromString("garbage");
+            converter = new DummyEnumTypeConverter();
         }
 
         [TestMethod]
@@ -31,15 +20,22 @@ namespace FlatFileParserUnitTests.Tests.TypeConverter
         }
 
         [TestMethod]
+        public void Should_ConvertStringToEnum_When_ValidLongStringIsUsed()
+        {
+            Assert.AreEqual(Day.Sat, converter.ConvertFromString("Saturday"));
+        }
+
+        [TestMethod]
         public void Should_ConvertStringToEnum_When_ValidShortStringIsUsed()
         {
             Assert.AreEqual(Day.Mon, converter.ConvertFromString("M"));
         }
 
         [TestMethod]
-        public void Should_ConvertStringToEnum_When_ValidLongStringIsUsed()
+        [ExpectedException(typeof(System.NotSupportedException), "Cannot convert from System.String")]
+        public void Should_NotConvertStringToEnum_When_ValidInvalidStringIsUsed()
         {
-            Assert.AreEqual(Day.Sat, converter.ConvertFromString("Saturday"));
+            converter.ConvertFromString("garbage");
         }
     }
 }
